Se actualiza makefile para nueva destribucion de proyecto pampas

--- a/test/makefile
+++ b/test/makefile
@@ -1,6 +1,6 @@
 # Regla principal
 all: 
-	g++ -std=c++11 -I../include $(FILE).cpp ../src/*.cpp -o $(FILE) -lwiringPi
+	g++ -std=c++11 -I../include $(FILE).cpp ../src/*.cpp -o $(FILE) -lwiringPi -DPAMPAS_DEV
 	sudo ./$(FILE)
 
 # Limpieza de ejecutables
