--- a/lolo/makefile
+++ b/lolo/makefile
@@ -1,3 +1,3 @@
 all:
-	g++ control.cpp pampas.cpp -o adapsintau -lwiringPi 
-	sudo ./adapsintau
+	g++ control.cpp pampas.cpp -o adap -lwiringPi 
+	sudo ./adap
